# Person_Segmentation

./: .gitignore  README.md
Libtorch_PersonSegmentation/: .gitignore  CMakeLists.txt  README.md
Libtorch_PersonSegmentation/include/: PersonSegmentation.h  log.h  params.h  utils.h
Libtorch_PersonSegmentation/src/: PersonSegmentation.cpp  main.cpp  utils.cpp
Ncnn_PersonSegmentation/: CMakeLists.txt
Ncnn_PersonSegmentation/include/: PersonSegmentation.h
Ncnn_PersonSegmentation/src/: PersonSegmentation.cpp  main.cpp
TensorRT_PersonSegmentation/: CMakeLists.txt
TensorRT_PersonSegmentation/include/: common.h  errorcode.h  params.h  personsegmentation.h  utils.h
TensorRT_PersonSegmentation/src/: main.cpp  personsegmention.cpp
